tests/snapshots/docx/apache-tika/testWORD_missing_text.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartHeading { id: None, level: 1 },
    EndHeading,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartHeading { id: None, level: 1 },
    EndHeading,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartHeading { id: None, level: 1 },
    Text { content: "Statement" },
    EndHeading,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Seasoned professional" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartHeading { id: None, level: 1 },
    Text { content: "Experience" },
    EndHeading,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartHeading { id: None, level: 2 },
    Text { content: "Big" },
    Text { content: "Company" },
    Text { content: "\t" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "other" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell0" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Rich_text_in_cell" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Cell2" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
