tests/snapshots/docx/apache-tika/testWORD_no_format.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a piece of text that causes an " },
    Text { content: "exception." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
