tests/snapshots/docx/apache-tika/testWORD_override_list_numbering.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Test 1:" },
    EndTextStyle,
    Text { content: " List with arbitrary text inserted" },
    Text { content: " and a bullet in between" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "0th" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 1, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1" },
    Text { content: "st" },
    Text { content: ".1" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 1, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1" },
    Text { content: "st" },
    Text { content: ".2" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 2, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    Text { content: ".2.1" },
    Text { content: "someText" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 2, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    Text { content: ".2.2" },
    Text { content: "someText" },
    EndParagraph,
    StartOrderedListItem { id: Some("1"), level: 3, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    Text { content: ".2.2" },
    Text { content: "someOtherText" },
    Text { content: ".1" },
    EndParagraph,
    StartUnorderedListItem { id: Some("18"), level: 4, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "·" },
    EndParagraph,
    StartOrderedListItem { id: Some("18"), level: 5, start: None, style_type: Decimal },
    StartOrderedListItem { id: Some("18"), level: 6, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1.1.1.1" },
    Text { content: "..." },
    Text { content: "1" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    EndUnorderedListItem,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 2, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    Text { content: ".2.3" },
    Text { content: "someText" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 1, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1st" },
    Text { content: ".3" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2nd" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "3rd" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "4" },
    Text { content: "th" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "5th" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Test 2:" },
    EndTextStyle,
    Text { content: " List with " },
    Text { content: "restartAt" },
    Text { content: " modified and skipped levels" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1" },
    EndParagraph,
    StartOrderedListItem { id: Some("6"), level: 1, start: None, style_type: LowerAlpha },
    StartParagraph { alignment: None, id: None },
    Text { content: "1.a" },
    EndParagraph,
    StartOrderedListItem { id: Some("6"), level: 2, start: None, style_type: UpperRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "1." },
    Text { content: "a.I" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 2, start: None, style_type: UpperRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "1." },
    Text { content: "a.II" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 1, start: None, style_type: LowerAlpha },
    StartParagraph { alignment: None, id: None },
    Text { content: "1." },
    Text { content: "b" },
    EndParagraph,
    StartOrderedListItem { id: Some("6"), level: 2, start: None, style_type: UpperRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "1." },
    Text { content: "b.III" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2" },
    EndParagraph,
    StartOrderedListItem { id: Some("6"), level: 1, start: None, style_type: Decimal },
    StartOrderedListItem { id: Some("6"), level: 2, start: None, style_type: UpperRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "2." },
    Text { content: "a.I" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("6"), level: 1, start: None, style_type: LowerAlpha },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.b" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Test 3:" },
    EndTextStyle,
    Text { content: " List with " },
    Text { content: "LegalNumbering" },
    Text { content: " and " },
    Text { content: "modified " },
    Text { content: "startAt" },
    Text { content: " value" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("9"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "(1))" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("9"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "(2))" },
    EndParagraph,
    StartOrderedListItem { id: Some("11"), level: 1, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.17" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("11"), level: 1, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.18" },
    EndParagraph,
    StartOrderedListItem { id: Some("11"), level: 2, start: None, style_type: LowerRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.18.i" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("11"), level: 2, start: None, style_type: LowerRoman },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.18.ii" },
    EndParagraph,
    StartOrderedListItem { id: Some("11"), level: 3, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2.18.2.1" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("14"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Test 4:" },
    EndTextStyle,
    Text { content: " " },
    Text { content: "ListFormatOverride" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("19"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "1" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("22"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "B" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("22"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "C" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("23"), level: 0, start: Some(1), style_type: UpperAlpha },
    StartParagraph { alignment: None, id: None },
    Text { content: "A" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("23"), level: 0, start: None, style_type: UpperAlpha },
    StartParagraph { alignment: None, id: None },
    Text { content: "B" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("19"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "4" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Test 5: More formatting variants" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("31"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "00" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("31"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "01" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "01." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "01." },
    EndParagraph,
    StartOrderedListItem { id: Some("31"), level: 1, start: None, style_type: Decimal },
    StartOrderedListItem { id: Some("31"), level: 2, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "01..1" },
    EndParagraph,
    EndOrderedListItem,
    EndOrderedListItem,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("31"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "02" },
    EndParagraph,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
