tests/snapshots/docx/apache-tika/testWORD_phonetic.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: Some(Left), id: None },
    Text { content: "とうきょう" },
    Text { content: "東京" },
    EndParagraph,
    StartParagraph { alignment: Some(Left), id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
